add a function to set global default font